<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/bg_dialog_phone"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_26_half"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="Helvetica"
            android:gravity="start|center_vertical"
            android:text="@string/app_permission"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_2"
            android:fontFamily="Helvetica"
            android:gravity="start|center_vertical"
            android:text="@string/need_permission"
            android:textColor="#E6000000"
            android:textSize="@dimen/dp_16" />
       

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_18"
            android:layout_marginTop="@dimen/dp_4"
            android:fontFamily="Helvetica"
            android:visibility="visible"
            android:gravity="start|center_vertical"
            android:text="@string/permission_storage"
            android:textColor="#99000000"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dp_18"
            android:layout_marginTop="@dimen/dp_6"
            android:fontFamily="Helvetica"
            android:gravity="left|center_vertical"
            android:text="@string/you_can_close_permissino"
            android:textColor="#E6000000"
            android:textSize="@dimen/dp_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_8">

            <TextView
                android:id="@+id/dialog_left_btn"
                android:layout_width="@dimen/dp_128"
                android:layout_height="@dimen/dp_18"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_dialog_button"
                android:fontFamily="Helvetica"
                android:gravity="center"
                android:text="@string/dialog_left_btn"
                android:textColor="@color/default_blue"
                android:textSize="@dimen/dp_16"
                android:textStyle="normal"
                android:typeface="monospace" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/dp_18"
                android:layout_centerInParent="true"
                android:background="@color/emui_mask_thin"/>

            <TextView
                android:id="@+id/dialog_right_btn"
                android:layout_width="@dimen/dp_128"
                android:layout_height="@dimen/dp_18"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_dialog_button"
                android:fontFamily="Helvetica"
                android:gravity="center"
                android:text="@string/dialog_right_btn"
                android:textColor="@color/default_blue"
                android:textSize="@dimen/dp_16"
                android:textStyle="normal"
                android:typeface="monospace" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>