<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_top_play_pause"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_2"
            android:src="@drawable/media_edit_play_btn_selector"
            tools:ignore="ContentDescription,MissingConstraints"
            android:contentDescription="@string/play"/>

        <TextView
            android:id="@+id/tv_top_running_time"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:fontFamily="Helvetica"
            android:text="@string/running_time_init"
            android:gravity="center"
            android:layout_marginStart="@dimen/dp_2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            tools:ignore="SpUsage" />

        <SeekBar
            android:id="@+id/videoseekbar"
            style="@style/SeekBarStylePreCrop"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0"
            android:progress="0" />

        <TextView
            android:id="@+id/tv_top_total_time"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="Helvetica"
            android:text="@string/total_time_init"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/sound_switch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/media_bg_sound_switch_selector" />

        <ImageView
            android:id="@+id/iv_full_screen"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_full_screen"
            android:contentDescription="@string/screen_all"/>
    </LinearLayout>
</RelativeLayout>